src/test/deca/context/valid/created/miscellaneous/assign_float_float.deca
// Description :
//    test  assign entre un float et un float
//
// Resultats :
//		Ok

{
float a = 0.5;
float b;
b = a;
}
